--- a/css/styles.css
+++ b/css/styles.css
@@ -1045,12 +1045,16 @@ body:not(.lg-from-hash)
 }
 
 .c-topstory-section__item {
-  flex: 1 1 calc(33.333% - 20px);
-  position: relative;
-  overflow: hidden;
+  /* flex: 1 1 calc(33.333% - 20px); */
+  /* position: relative; */
+  /* overflow: hidden; */
   background-color: #000;
 }
 
+.c-topstory-section__img {
+  transform: skewX(-10deg);
+  overflow: hidden;
+}
 .c-topstory-section__img img {
   width: 100%;
   height: auto;
@@ -1064,6 +1068,7 @@ body:not(.lg-from-hash)
   width: 100%;
   padding: 20px;
   color: white;
+  transform: skewX(10deg);
 }
 
 .c-topstory-section__info-box {
@@ -1091,6 +1096,30 @@ body:not(.lg-from-hash)
 .c-topstory-section__info-box .date {
   color: var(--color-light);
   font-size: 14px;
+}
+.topstory__btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: var(--color-primary);
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  border: none;
+  z-index: 5;
+  cursor: pointer;
+}
+.topstory__btn img {
+  width: 24px;
+  height: 24px;
+  object-fit: contain;
+}
+.topstory__btnprev {
+  left: 32px;
+  transform: rotate(-180deg);
+}
+.topstory__btnnext {
+  right: 32px;
 }
 .lg-actual-size,
 .lg-outer[data-lg-slide-type='video'] .lg-zoom-in,
@@ -4376,6 +4405,9 @@ th {
   margin: 0 0.25rem;
   padding: 0;
 }
+.c-topstory-section {
+  /* margin: 0 -32px; */
+}
 .c-topstory-section__inner {
   display: flex;
   flex-wrap: wrap;
@@ -4386,45 +4418,8 @@ th {
 }
 .c-topstory-section__item {
   height: 600px;
-  overflow: hidden;
 }
-.c-topstory-section__item:nth-child(2) {
-  border-top: 0.0625rem solid var(--color-light);
-}
-.c-topstory-section__item:hover .h3,
-.c-topstory-section__item:hover .h5 {
-  -webkit-text-decoration-color: var(--color-light);
-  text-decoration-color: var(--color-light);
-}
-.c-topstory-section__item:hover img {
-  -webkit-transform: scale(1.05);
-  transform: scale(1.05);
-}
-.c-topstory-section__item svg {
-  width: 2.5rem;
-  padding: 0 0.5rem;
-  height: 2.5rem;
-}
-.c-topstory-section__item--main {
-  flex: 0 0 66%;
-  max-width: 66%;
-  height: 33.375rem;
-  border-right: 0.0625rem solid var(--color-light);
-}
-.c-topstory-section__item--main .c-topstory-section__info-box {
-  margin-bottom: 2.5rem;
-}
-.c-topstory-section__item--main .c-topstory-section__img:before {
-  width: 2.125rem;
-  height: 2rem;
-  bottom: 2.5rem;
-  right: 2.5rem;
-}
-.c-topstory-section__item--main svg {
-  width: 3.75rem;
-  padding: 0 0.5rem;
-  height: 2.5rem;
-}
+
 .c-topstory-section__img {
   height: 100%;
   width: 100%;
@@ -4461,6 +4456,11 @@ th {
   object-fit: cover;
   transition: all 0.3s;
 }
+.c-topstory-section__item:hover img {
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
 .c-topstory-section__info {
   position: absolute;
   bottom: 0;
@@ -4657,9 +4657,7 @@ th {
 }
 @media (min-width: 48em) and (max-width: 61.999em) {
   .c-topstory-section__item {
-    max-width: 50%;
-    flex: 0 0 50%;
-    height: auto;
+    height: 400px;
   }
 }
 @media (min-width: 62em) {
@@ -4687,9 +4685,7 @@ th {
 }
 @media (min-width: 62em) and (max-width: 77.499em) {
   .c-topstory-section__item {
-    max-width: 50%;
-    flex: 0 0 50%;
-    height: auto;
+    height: 400px;
   }
 }
 @media (min-width: 77.5em) {
@@ -5007,21 +5003,18 @@ th {
   .c-topstory-section__item:nth-child(2) {
     border-top: 0.0625rem solid var(--color-light);
   }
+  .c-topstory-section__img,
+  .c-topstory-section__info {
+    transform: none;
+  }
   .c-topstory-section__item {
     max-width: 100%;
     flex: 100%;
     height: auto;
+    width: 100%;
     min-height: 20rem !important;
   }
-  .c-topstory-section__item--main .c-topstory-section__info-box {
-    margin-bottom: 1.25rem;
-  }
-  .c-topstory-section__item--main .c-topstory-section__img:before {
-    right: 1.25rem;
-    bottom: 1.25rem;
-    width: 1.5625rem;
-    height: 1.5rem;
-  }
+
   .c-topstory-section__info-box {
     padding-right: 3.125rem;
   }
@@ -5063,4 +5056,5 @@ th {
     height: 1.25rem;
   }
 }
+
 /*# sourceMappingURL=styles.css.map */
